force-app/main/default/objects/Dependents__c/Dependents__c.object-meta.xml
<CustomObject>
    <label>Dependents</label>
    <nameField>
        <displayFormat>D{0000}</displayFormat>
        <label>Dependents</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>