force-app/main/default/objects/Dependents__c/fields/Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Owner</label>
    <referenceTo>Business_Owner__c</referenceTo>
    <relationshipLabel>Dependents</relationshipLabel>
    <relationshipName>Dependents</relationshipName>
    <type>Lookup</type>
</CustomField>