force-app/main/default/objects/Dependents__c/fields/Dependents_DOB__c.field-meta.xml
<CustomField>
    <fullName>Dependents_DOB__c</fullName>
    <label>Dependents DOB</label>
    <type>Date</type>
</CustomField>