force-app/main/default/objects/Dependents__c/fields/Dependents_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Dependents_First_Name__c</fullName>
    <label>Dependents First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>