force-app/main/default/objects/Dependents__c/fields/Dependents_SSN__c.field-meta.xml
<CustomField>
    <fullName>Dependents_SSN__c</fullName>
    <label>Dependents SSN</label>
    <length>25</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>